[package]
name = "optim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
oxipng = "5.0.1"
log = "0.4.16"
pretty_env_logger = "0.4.0"
wasm-bindgen = "0.2"

#[lib]
#crate-type = ["cdylib"]
